# chemflow2

./: .gitignore  README.md  pyproject.toml
chemflow2/: __init__.py
chemflow2/core/: __init__.py  component.py  errors.py  expr.py  pressure.py  problem.py  reaction.py  stream.py  unit.py
chemflow2/io/: __init__.py  diagram.py  excel.py  table.py
chemflow2/units/: __init__.py  gibbs.py  mixer.py  reactor.py  separator.py  splitter.py
docs/: GUIDE.md
examples/: example_declarative.py  example_diagram.py  example_excel.py  example_gibbs.py  example_multibasis.py  example_plant.py  example_plant2.py  example_recovery.py  example_recycle.py  example_splitter.py
tests/: test_basic.py
